# awesome-mcp-servers

./: README.md
mcp-hot-news/: .gitignore  README.md  pyproject.toml  requirements.txt  server.json  setup.py
mcp-hot-news/docs/: bug_fixes.md  code_review.md  development.md  mcp_agent_config.md  module_design.md  project_summary.md  system_design.md  testing.md  usage.md
mcp-hot-news/src/: __init__.py  __main__.py  models.py  news_fetcher.py  news_processor.py  server.py
mcp-hot-news/src/providers/: __init__.py  base_provider.py  thepaper_provider.py  wechat_provider.py  weibo_provider.py  zhihu_provider.py
mcp-hot-news/tests/: conftest.py  test_models.py  test_news_fetcher.py  test_news_processor.py
